# crm-rag-eval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: leaderboard.py
datasets/: README.md
docs/: business-risk-scoring.md  comparison.md  faq.md
examples/: langchain_example.py  llamaindex_example.py  ollama_example.py
scripts/: publish_to_pypi.sh  upload_to_huggingface.py
src/crm_rag_eval/: __init__.py  cli.py  evaluator.py
src/crm_rag_eval/datasets/: faq.py  tickets.py
src/crm_rag_eval/formatters/: html_report.py
src/crm_rag_eval/metrics/: engine.py
src/crm_rag_eval/risk/: scorer.py
tests/: test_all.py
