[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crm-rag-eval"
version = "1.1.0"
description = "Evaluate RAG systems for CRM and customer-support use cases with synthetic datasets and business-risk scoring"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]
keywords = [
    "rag", "evaluation", "crm", "customer-support", "llm",
    "retrieval-augmented-generation", "hallucination", "salesforce",
    "langchain", "llamaindex", "synthetic-data", "business-risk"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
Homepage = "https://github.com/chitralabs/crm-rag-eval"
Repository = "https://github.com/chitralabs/crm-rag-eval"
Issues = "https://github.com/chitralabs/crm-rag-eval/issues"
Documentation = "https://chitralabs.github.io/crm-rag-eval"

[project.scripts]
crm-rag-eval = "crm_rag_eval.cli:app"

[project.optional-dependencies]
langchain = ["langchain>=0.2.0", "langchain-openai>=0.1.0"]
llamaindex = ["llama-index>=0.10.0"]
openai = ["openai>=1.0.0"]
ollama = ["ollama>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build",
    "twine",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crm_rag_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=crm_rag_eval --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["src/crm_rag_eval"]

[tool.ruff]
line-length = 100
target-version = "py39"
